--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     username: root
     password: 123456
 mybatis:
-  type-aliases-package: pikachu.demo.models
+  type-aliases-package: springboot.mybatis.models
   configuration:
     map-underscore-to-camel-case: true
     default-fetch-size: 100
